<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    tools:context=".room_types.SingleBedroom">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="TRIPLE BEDS"
        android:background="@color/colorAccent"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="3dp"
        android:background="@color/colorPrimaryDark">

    </View>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_margin="15dp"
        android:src="@drawable/triple_bed"/>

     <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@drawable/singlebed2"/>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@drawable/single_bed"/>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@drawable/singlebed3"/>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@drawable/singlebed4"/>
        </LinearLayout>
    </HorizontalScrollView>
    <TextView
        android:id="@+id/deposit_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_margin="10dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/deposit_box"/>

    <TextView
        android:id="@+id/slippers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="15dp"
        android:textSize="19dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/slippers"/>


    <TextView
        android:id="@+id/hot_water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="15dp"
        android:textSize="19dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/hot_water"/>

    <TextView
        android:id="@+id/tea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="15dp"
        android:textSize="19dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/tea_maker"/>

    <TextView
        android:id="@+id/AC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="15dp"
        android:textSize="19dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/ac"/>

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="15dp"
        android:textSize="19dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/tv"/>

</LinearLayout>