<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/singlebed4"
    android:orientation="vertical"
    tools:context=".room_types.SingleBedroom">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="SINGLE BEDS"
        android:background="@color/colorAccent"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="3dp"
        android:background="@color/colorPrimaryDark">

    </View>
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@drawable/singlebed2"/>

            <ImageView
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:src="@drawable/singlebed1"/>
            <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@drawable/single_bed"/>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@drawable/singlebed3"/>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@drawable/singlebed4"/>
        </LinearLayout>
    </HorizontalScrollView>
    <TextView
        android:id="@+id/wifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/wifi"/>

    <TextView
        android:id="@+id/room_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/room_service"/>


    <TextView
        android:id="@+id/wardrobe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/wardrobe"/>

    <TextView
        android:id="@+id/AC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/ac"/>

    <TextView
        android:id="@+id/bathroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/washroom_bathroom"/>

    <TextView
        android:id="@+id/slippers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/slippers"/>


</LinearLayout>